modify some services
